syntax = "proto3";

package planning_poker;

option go_package = "./pb";

service PlanningPoker {
  rpc CreateRoom(CreateRoomRequest) returns (stream ConnectResponse);
  rpc Connect(ConnectRequest) returns (stream ConnectResponse);
  rpc Vote(VoteRequest) returns (VoteResponse);
  rpc ShowVotes(ShowVotesRequest) returns (ShowVotesResponse);
  rpc NewGame(NewGameRequest) returns (NewGameResponse);
}

enum MessageType {
  JOIN = 0;
  VOTE = 1;
  SHOW_VOTES = 2;
  LEAVE = 3;
  NEW_GAME = 4;
  CREATE_ROOM = 5;
  STATUS = 6;
  RESET_VOTE = 7;
}

message CreateRoomRequest {
  string id = 1;
  string roomName = 2;
}

message ConnectRequest {
  string id = 1;
  string roomId = 2;
}

message ConnectResponse {
  string id = 1;
  MessageType type = 2;
  string message = 3;
}

message VoteRequest {
  string id = 1;
  int32 vote = 2;
  string roomId = 3;
}
message VoteResponse {
  string message = 1;
}

message ShowVotesRequest {
  string id = 1;
  string roomId = 2;
}
message ShowVotesResponse {
  string message = 1;
}

message NewGameRequest {
  string id = 1;
  string roomId = 2;
}
message NewGameResponse {
  string message = 1;
}
